Support setting a full JDK for a test runner